syntax = "proto3";

package mpb;

option go_package = "./mpb";

message DBEnergy {
    uint32 energy = 1;
    int64 recover_at = 2;
}

message DBFightHistory {
    map<uint32, uint32> win_times = 1;
}

message DBHiddenBossFindHistory {
    map<uint64, int64> boss_expire_at = 1;
}

message DBHiddenBoss {
    uint64 boss_uuid = 1;
    uint32 boss_id = 2;
    uint64 finder = 3;
    uint64 hp = 4;
    int64 expired_at = 5;
    map<uint64,int64> last_fight_time = 6;
    map<uint64, uint64> dmgs = 7; // recode dmg, only dmg >1% hp will be recoded
    uint64 killer = 8;
}